--- a/src/components/Common/Header/Header.css
+++ b/src/components/Common/Header/Header.css
@@ -1,6 +1,6 @@
 .header-Container {
   height: 3.5rem;
-  width: calc(100% - 80px); /* lascia spazio per la sidebar */
+  width: calc(100% - 80px);
   margin-left: 80px;
   display: flex;
   align-items: center;
@@ -10,7 +10,7 @@
   justify-content: space-between;
   background-color: white;
   z-index: 2;
-  border-top-left-radius: 20px;
+
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   padding: 2px 3px; 
 }
