--- a/src/components/Common/Sidebar/sideBar.css
+++ b/src/components/Common/Sidebar/sideBar.css
@@ -49,11 +49,11 @@
     height: 30px;
 }
 
-.Asvg{
-    background-image: url("/public/A.svg");
+.Psvg{
+    background-image: url("/public/parking.svg");
     background-size: cover;
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
 }
 
 .middle-content{
