--- a/src/components/Common/Sidebar/sideBar.css
+++ b/src/components/Common/Sidebar/sideBar.css
@@ -62,3 +62,10 @@
     gap: 1.5rem;
     align-items: center;
 }
+
+.NoteSvg{
+    background-image: url("/src/assets/note.svg");
+    background-size: cover;
+    width: 40px;
+    height: 40px;
+}
