--- a/src/components/Common/SearchBar/SearchBar.css
+++ b/src/components/Common/SearchBar/SearchBar.css
@@ -1,14 +1,13 @@
-.search-input {
-  height: 50px;
-}
+
 
 .barraRicerca {
   width: 20rem;
-  height: 1.5em;
+  height: 2.5em;
   padding: 10px;
   border-radius: 5px;
   border: none;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+  background-color: rgb(235, 235, 241);
 }
 
 
