--- a/src/components/Common/Table/Table.css
+++ b/src/components/Common/Table/Table.css
@@ -5,7 +5,6 @@
 .table-container {
     margin: 20px;
     display: flex;
-    margin-left: 80px;
 }
 
 .body_style {
@@ -17,7 +16,7 @@
     
 }
 
-.table {
+.my-table {
     width: 60rem;
     height: 10rem;
     border: 1px solid #ccc;
@@ -31,7 +30,7 @@
 
 th {
     padding : 10px;
-    background-color: #f0ecec;
+    background-color: rgb(235, 235, 241);
     
 }
 
