--- a/src/components/Common/SearchBar/SearchBar.css
+++ b/src/components/Common/SearchBar/SearchBar.css
@@ -1,13 +1,16 @@
-
-
 .barraRicerca {
   width: 20rem;
   height: 2.5em;
   padding: 10px;
   border-radius: 5px;
   border: none;
-  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
   background-color: rgb(235, 235, 241);
+  color: black;
+}
+
+.barraRicerca::placeholder {
+  color: #555;
 }
 
 
@@ -19,14 +22,5 @@
     align-items: center;
     justify-content: center;
    
-  }
-
-  .buttonStyle {
-    width: 30%;
-    margin-left: 7.5rem;
-    height: 50px;
-    font-size: 1.2rem;
-    margin-top: 20px;
-  
   }
 }
