--- a/src/components/Common/Table/Table.css
+++ b/src/components/Common/Table/Table.css
@@ -3,10 +3,9 @@
 }
 
 .table-container {
-    margin: 20px;
-    display: flex;
+    width: 80%;
+    margin-left: 80px;
 }
-
 .body_style {
     color : black;
 }
@@ -17,7 +16,7 @@
 }
 
 .my-table {
-    width: 60rem;
+    width: 100%;
     height: 10rem;
     border: 1px solid #ccc;
     border-collapse: collapse;
@@ -39,3 +38,4 @@ td {
     border-top : 1px solid rgba(158, 156, 156, 0.551);
     
 }
+
