--- a/src/components/pages/AutoDetail.css
+++ b/src/components/pages/AutoDetail.css
@@ -43,11 +43,13 @@
 }
 
 .auto_form input {
-  padding: 10px 12px;
+  padding: 6px 8px;
   font-size: 1rem;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 3px;
   transition: border-color 0.3s;
+  background-color: white;
+  color: black;
 }
 
 .auto_form input:focus {
