--- a/src/components/pages/ParcheggiDetail.css
+++ b/src/components/pages/ParcheggiDetail.css
@@ -44,16 +44,17 @@
 }
 
 .parking_form input {
-  padding: 10px 12px;
+  padding: 5px 8px;
   font-size: 1rem;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 3px;
   transition: border-color 0.3s;
+  color: black;
+  background-color: white;
 }
 
 .TextForm{
-    font-size: 1.2rem;
-
+  font-size: 1.2rem;
 }
 
 .parking_form input:focus {
