--- a/src/components/Common/AddForm/ModalPark.css
+++ b/src/components/Common/AddForm/ModalPark.css
@@ -4,20 +4,27 @@
 }
 
 .modal-body  .modal-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .color{
-    background-color: #f5f0e9;
-    border: none;
-    height: 2.5rem;
-    color: rgb(60, 58, 58);
+  background-color: #f5f0e9;
+  border: none;
+  height: 2.5rem;
+  color: rgb(60, 58, 58);
 }
 
- .color:hover{
-    background-color: #e9f5e9;
-    color: rgb(60, 58, 58);
- }
+.color:hover{
+  background-color: #e9f5e9;
+  color: rgb(60, 58, 58);
+}
+
+
+#buttonGreenModal{
+  width: 8rem;
+  background-color: #038203 !important; 
+  border-color: #038203  !important;
+}
 
