readjusted many things

--- a/src/components/pages/AutoPage.css
+++ b/src/components/pages/AutoPage.css
@@ -24,6 +24,8 @@
   width: 12rem;
   background-color: #038203 !important; 
   border-color: #038203  !important;
+  font-weight: bold !important;
+  height: 2.5rem;
 }
 
 
