--- a/src/components/pages/DashBoard.css
+++ b/src/components/pages/DashBoard.css
@@ -6,6 +6,13 @@
 }
 
 .main-content-wrapper{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     height: 100%;
+}
+.main-content {
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
