--- a/src/components/pages/PrenotazioniTable.css
+++ b/src/components/pages/PrenotazioniTable.css
@@ -5,7 +5,7 @@
 
 .pagination_container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
@@ -15,4 +15,23 @@
     font-weight: bold;
     background-color: #038203 !important; 
     border: none;
+}
+
+
+@media (max-width: 630px){
+    .my-table th,
+    .my-table td {
+        text-align: center;
+}
+
+    .buttonGreen2{
+        width: 6rem;
+        font-size: 10px;
+    }
+
+    .pagination_container {
+        margin-left: 70px;
+    }
+
+   
 }
