--- a/src/components/Common/Table/Table.css
+++ b/src/components/Common/Table/Table.css
@@ -36,14 +36,14 @@ th {
     padding: 16px 12px;
     background-color: rgb(235, 235, 241);
     border: none;
-    text-align: left;
+    text-align: center;
 }
 
 
 td {
     border-top: 1px solid rgba(158, 156, 156, 0.12);
     padding: 16px 12px;
-    text-align: left;
+    text-align: center;
     background: #fff;
     font-size: 1rem;
     transition: font-size 0.2s;
