--- a/src/components/pages/PrenotazioniPage.css
+++ b/src/components/pages/PrenotazioniPage.css
@@ -18,9 +18,10 @@
   margin-bottom: 20px;
 }
 
-.margin-text{
+.margin-text {
   margin-top: 5rem;
 }
+
 .date-select {
   display: flex;
   flex-direction: column;
@@ -29,7 +30,8 @@
   text-align: center;
 }
 
-.auto-select, .parcheggio-select {
+.auto-select,
+.parcheggio-select {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,8 +48,9 @@
   color: hsl(0, 0%, 50%);
   background-color: rgb(255, 255, 255);
 }
+
 .date-select input {
-  text-align: center; 
+  text-align: center;
 }
 
 input[type="datetime-local"]::-webkit-calendar-picker-indicator {
@@ -65,6 +68,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   justify-content: center;
   padding: 50px;
 }
+
 .css-19bb58m {
   width: 20rem;
 }
@@ -75,7 +79,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
 }
 
 
-.btn-prenota{
+.btn-prenota {
   background-color: #038203;
   color: white;
   border: none;
@@ -90,7 +94,7 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   color: white;
 }
 
-.buttons-container{
+.buttons-container {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -108,6 +112,3 @@ input[type="datetime-local"]::-webkit-calendar-picker-indicator {
 .button-bottom:hover {
   background-color: #3498db;
 }
-
-
-
