--- a/src/components/Common/Header/Header.css
+++ b/src/components/Common/Header/Header.css
@@ -1,7 +1,6 @@
 .header-Container {
   height: 3.5rem;
-  width: calc(100% - 80px);
-  margin-left: 80px;
+  width: 100%;
   display: flex;
   align-items: center;
   position: fixed;
@@ -9,7 +8,7 @@
   left: 0;
   justify-content: space-between;
   background-color: white;
-  z-index: 2;
+  z-index: 0;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   padding: 2px 3px; 
 }
