--- a/src/components/Common/Header/Header.css
+++ b/src/components/Common/Header/Header.css
@@ -8,7 +8,7 @@
   left: 0;
   justify-content: space-between;
   background-color: white;
-  z-index: 0;
+  z-index: 1;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   padding: 2px 3px; 
 }
@@ -31,5 +31,11 @@
     width: 40px;
 }
 
+
+@media (max-width : 400px){
+  .right-content {
+    margin-right: 5.5rem;
+  }
+}
 
 
