--- a/src/components/Common/Sidebar/sideBar.css
+++ b/src/components/Common/Sidebar/sideBar.css
@@ -1,33 +1,33 @@
 .sideBar-container {
-  height: 100vh;
-  width: 80px;
-  background-color: #3d4146;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
- 
+    height: 100vh;
+    width: 80px;
+    background-color: #3d4146;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    transition: margin-left 0.3s ease;
 }
 
 
-.searchSvg{
+.searchSvg {
     background-image: url("/public/search-svgrepo-com.svg");
     background-size: cover;
     width: 30px;
     height: 30px;
     color: #1a1a1a;
-    
-   
+
+
 
 }
 
 
 
-.outer_{
+.outer_ {
     background-color: #3d4146;
     width: 60px;
     height: 60px;
@@ -35,47 +35,81 @@
     place-items: center;
 }
 
-.outer_:hover{
+.outer_:hover {
     background-color: #4e4f50;
     cursor: pointer;
     border-radius: 10px;
 }
 
 
-.carSvg{
-    background-image: url("/public/carSvg.svg") ;
+.carSvg {
+    background-image: url("/public/carSvg.svg");
     background-size: cover;
     width: 30px;
     height: 30px;
 }
 
-.Psvg{
+.Psvg {
     background-image: url("/public/parking.svg");
     background-size: cover;
     width: 25px;
     height: 25px;
 }
 
-.middle-content{
+.middle-content {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
     align-items: center;
 }
 
-.NoteSvg{
+.NoteSvg {
     background-image: url("/src/assets/note.svg");
     background-size: cover;
     width: 40px;
     height: 40px;
 }
 
-.collapseSvg{
-    background-image: url("/src/assets/Collapse.svg");
-    background-size: cover;
-    width: 35px;
-    height: 35px;
-    margin-top: 10px;
 
+
+
+
+@media (max-width : 480px) {
+  .whiteCollapseSvg {
+    background-image: url("/src/assets/whiteCollapse.svg");
+    background-size: cover;
+    width: 30px;
+    height: 30px;
+    margin-top: 13px;
+    cursor: pointer;
+    position: fixed;
+    top: 1px;
+    left: 25px;
+    z-index: 2;
 }
 
+.blackSvg {
+    background-image: url("/src/assets/blackCollapsed.svg");
+    background-size: cover;
+    width: 30px;
+    height: 30px;
+    margin-top: 13px;
+    cursor: pointer;
+    position: fixed;
+    top: 1px;
+    left: 25px;
+    z-index: 2;
+    }
+
+    .sideBar-container.collapsed {
+        margin-left: -80px;
+
+    }
+
+    .sideBar-container.open {
+        margin-left: 0;
+    }
+
+
+ 
+}
