--- a/src/components/pages/AutoPage.css
+++ b/src/components/pages/AutoPage.css
@@ -47,12 +47,9 @@
         width: 6rem;
         font-size: 15px;
         height: 4.5rem;
-
+        
     }
 
-    .SearchBar{
-        margin-left: 70px;
-    }
 
     .ciao{
         margin-left: 70px;
@@ -61,10 +58,12 @@
 }
 
 
-@media (max-width : 600px) {
+@media (max-width : 400px) {
     .buttonGreen2{
-        width: 6rem;
-        font-size: 10px;
+        width: 2rem;
+        font-size: 1px;
     }
-
+    .pagination{
+        margin-left: -100px;
+    }
 }
